# Tourguide

./: .env.debug  .env.docker  .env.v1dd  .gitignore  Dockerfile  Dockerfile.metrics  README.md  cloudbuild.yaml  custom_logger.py  dash-run.py  gunicorn.conf.py  launch_in_docker.sh  metrics_serving.py  mkdocs.yml  pyproject.toml  run.py  scratch.ipynb  test.ipynb
docs/: index.md
docs/reference/: api.md
guidebook/: debug.env
guidebook/flask_app/: __init__.py  api.py  config.py
guidebook/flask_app/templates/: base.html  index.html
guidebook/guidebook_app/: __init__.py  external_stylesheets.py  utils.py
guidebook/guidebook_app/pages/: callbacks.py  datastack.py
guidebook/guidebook_lib/: lib_utils.py  processing.py  states.py
tourguide/flask_app/: __init__.py  api.py  config.py
tourguide/flask_app/templates/: base.html  index.html
tourguide/tourguide_app/: __init__.py  external_stylesheets.py  utils.py
tourguide/tourguide_app/pages/: callbacks.py  datastack.py
tourguide/tourguide_lib/: lib_utils.py  processing.py  states.py
