[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]

[project]
name = "guidebook"
version = "2.0.0"
description = "Generate states based on neuron topology"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cachetools>=5.5.0",
    "caveclient>=7.4.3",
    "cloud-volume>=11.1.3",
    "cryptography>=44.0.0",
    "dash-mantine-components>=0.15.1",
    "flask>=3.1.0",
    "meshparty>=1.18.0",
    "middle-auth-client>=3.18.1",
    "nglui>=3.7.2",
    "numpy>=2.0.2",
    "orjson>=3.10.14",
    "pandas>=2.2.3",
    "pcg-skel>=1.2.2",
    "scipy",
]
authors = [
    { name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "bump-my-version",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lint = [
    "ruff"
]

[tool.uv]
default-groups = ["dev", "docs", "lint"]

[tool.bumpversion]
current_version = "0.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""
pre_commit_hooks = ['uv sync', 'git add uv.lock']
post_commit_hooks = ["./.bmv-post-commit.sh"]

[[tool.bumpversion.files]]
filename = "src//__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=guidebook tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"
